# opencv_samples

check_confidence/: CMakeLists.txt  check_confidence.cpp  check_eye_confidence.cpp
